# ai-lab

./: .gitignore
agents-week/: 01-agent.ipynb  01-intro.ipynb  02-agent.ipynb  02-tools.ipynb  03-guardrails-and-memory.ipynb  04-multi-agent-system.ipynb  pyproject.toml
agents-week/data/: passenger_profile.json
ai-agents-and-applications/ch02/: ch02-1-prompt-eng.ipynb  ch02-2-langchain.ipynb  ch02-3-prompt-templates.ipynb  ch02-4-few-shot-learning.ipynb  pyproject.toml
ai-agents-and-applications/ch03/: Moby-Dick.txt  ch03-1-summarizing-a-big-document.ipynb  ch03-1-summarizing-across-documents.ipynb  pyproject.toml
ai-agents-and-applications/ch04/: llm_models.py  main.py  prompts.py  pyproject.toml  research_engine_lcel.py  research_engine_seq.py  utils.py  web_scraping.py  web_scraping_try.py  web_searching.py  web_searching_try.py
ai-agents-and-applications/ch05/: llm_models.py  nodes.py  prompts.py  pyproject.toml  research_assistant.py  state.py
k8s-gpu-basics/fake-busy-gpu/: check-gpu.yaml  fake-busy.yaml
k8s-gpu-basics/flask-inference-cpu/: configmap.yaml  deployment.yaml  loadgen-pod.yaml  service.yaml
k8s-gpu-basics/metrics-demo/: configmap.yaml
